# pyflare

./: .gitignore  README.md  install.sh  pyproject.toml
examples/: README.md  args_demo.py  hello.py  parallel_basic.py  secrets_demo.py  timeout_demo.py
examples/r2_data_processing/: .env.example  README.md  generate_data.py  process.py  pyproject.toml
flare/: __init__.py  app.py  config.py  executor.py  function.py  serializer.py
flare-worker/: .env.example  Dockerfile  README.md  package-lock.json  package.json  wrangler.jsonc
flare-worker/src/: auth.ts  index.ts  types.ts
flare-worker/src/routes/: execute.ts  executeBatch.ts
flare/cli/: __init__.py  main.py  progress.py
flare/cli/commands/: config.py  run.py
